course title no longer gets cut off

--- a/public/stylesheets/sass/custom.scss
+++ b/public/stylesheets/sass/custom.scss
@@ -172,6 +172,7 @@ ul#local-nav {
       color: #09c;
       background: #fff;
       border: 0px none;
+      width: auto;
     }
     margin-left: 30px;
     margin-right: 30px;
